--- a/carddetails.html
+++ b/carddetails.html
@@ -3,69 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Details</title>
+    <title>Mock Credit Card Form</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
             background-color: #f4f4f4;
-        }
-        .card {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 300px;
-            margin: 20px;
-            overflow: hidden;
-            text-align: center;
-        }
-        .card img {
-            width: 100%;
-            height: auto;
-        }
-        .card-body {
             padding: 20px;
         }
-        .card-title {
-            font-size: 1.5em;
-            margin: 0;
-            color: #333;
+        .form-container {
+            max-width: 400px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-        .card-text {
-            font-size: 1em;
-            color: #666;
-            margin: 10px 0;
+        .form-group {
+            margin-bottom: 15px;
         }
-        .card-button {
-            background-color: #007bff;
-            border: none;
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input[type="text"], input[type="number"], input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
             border-radius: 4px;
-            color: white;
-            cursor: pointer;
-            font-size: 1em;
-            padding: 10px 20px;
-            text-decoration: none;
         }
-        .card-button:hover {
-            background-color: #0056b3;
+        input[type="submit"] {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #218838;
         }
     </style>
 </head>
 <body>
 
-    <div class="card">
-        <img src="https://via.placeholder.com/300x200" alt="Card Image">
-        <div class="card-body">
-            <h2 class="card-title">Card Title</h2>
-            <p class="card-text">This is a brief description of the card. It provides some information about the content of the card.</p>
-            <a href="#" class="card-button">Learn More</a>
-        </div>
+    <div class="form-container">
+        <h2>Credit Card Payment</h2>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="card-name">Cardholder Name</label>
+                <input type="text" id="card-name" name="card-name" required>
+            </div>
+            <div class="form-group">
+                <label for="card-number">Card Number</label>
+                <input type="number" id="card-number" name="card-number" required>
+            </div>
+            <div class="form-group">
+                <label for="expiry-date">Expiry Date (MM/YY)</label>
+                <input type="text" id="expiry-date" name="expiry-date" placeholder="MM/YY" required>
+            </div>
+            <div class="form-group">
+                <label for="cvv">CVV</label>
+                <input type="number" id="cvv" name="cvv" required>
+            </div>
+            <input type="submit" value="Submit Payment">
+        </form>
     </div>
 
 </body>
 </html>
-
