--- a/homepage.html
+++ b/homepage.html
@@ -91,6 +91,9 @@
         <div class="container">
             <h1>Welcome to Our Hotel</h1>
             <p>Your comfort is our priority</p>
+       <p>
+            <a href="https://cwhaite0524.github.io/bookingpage" target="_blank">Visit Example.com</a>
+    <p/>
         </div>
     </header>
 
